# foresight-rag

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  agentic-framework.md  setup-and-plan.md
src/foresight/: config.py  graph.py  llm.py  planner.py  reflector.py  retrieval.py  state.py  tools.py  validator.py
src/foresight/adapters/: _secrets.py  chroma_store.py  factory.py  openrouter_chat.py  openrouter_embeddings.py
src/foresight/core/: planner.py  reflector.py  relevance.py  strategies.py  types.py  validator.py
src/foresight/core/prompts/: __init__.py  answer.jinja2  executor.jinja2  planner.jinja2  reflector.jinja2  strips_tools_system.jinja2
src/foresight/data/: load_hotpot.py
src/foresight/eval/: metrics.py  run_eval.py
src/foresight/orchestration/: baseline_graph.py  case_store.py  graph.py  state.py  tools.py
src/foresight/ports/: __init__.py
src/foresight/prompts/: __init__.py  baseline_system.jinja2  planner.jinja2  reflector.jinja2
tests/: test_graph.py  test_load_hotpot.py  test_metrics.py  test_planner.py  test_prompts.py  test_reflector.py  test_validator.py
