[project]
name = "foresight-rag-framework"
version = "0.1.0"
description = "4-layer agentic planning framework over HotPotQA — STRIPS tools, query planner, state validator, reflector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.4",
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/foresight"]

[tool.pytest.ini_options]
testpaths = ["tests"]
